--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,8 @@
     <div class="label-container">
         Url: <span id="url"></span>
     </div>
-    <div id="executeButton">
-        <i class="ri-download-fill"></i>
+    <div class="image-box" id="execute-button">
+        <img src="images/download.png" alt="download">
     </div>
     <script src="index.js" charset="utf-8"></script>
   </body>
